@@ -1,17 +1,20 @@
 #include <iostream>
 #include <libplayerc++/playerc++.h>
+#include <unistd.h>
 using namespace std;
 using namespace PlayerCc;
 
 int main(int argc, char **argv)
 {
-	PlayerClient    robot("localhost");
+	PlayerClient    robot;
 	Position2dProxy pp(&robot, 0);
 
-	pp.SetMotorEnable(true);
-	pp.GetXPos();
-
-	while (true) {
+	while (1) {
+		robot.Read(); // Read from proxies
+		pp.SetSpeed(100, 0);
+		pp.SetCarlike(0,0);
+		pp.GetSize();
+		cout << "speed: " << pp.GetXSpeed() << "   pos: " << pp.GetXPos() << endl;
 	}
 
 	return 0;
